--- a/style.css
+++ b/style.css
@@ -153,42 +153,32 @@ p {
     width: 90%;
 }
 
-.payment-buttons button {
+.payment-buttons a {
     border-radius: 0.6rem;
     border: none;
     padding: 0.8rem;
     width: 100%;
-}
-
-.payment-buttons a {
+    text-align: center;
     text-decoration: none;
     font-weight: bold;
 }
 
-.payment-buttons button:first-child {
+.payment-buttons a:first-child {
     background-color: var(--bright-blue);
-    box-shadow: 0px 0px 1px 0px var(--bright-blue);
-
-}
-
-.payment-buttons button:first-child a {
+    box-shadow: 0px 3px 3px 1px var(--desaturated-blue);
     color: var(--very-pale-blue);
 }
 
-.payment-buttons button:first-child:hover {
+.payment-buttons a:first-child:hover {
     background-color: var(--bright-blue-hover);
-    cursor: pointer;
 }
 
-.payment-buttons button:last-child {
+.payment-buttons a:last-child {
     background-color: transparent;
-}
-
-.payment-buttons button:last-child a {
     color: var(--desaturated-blue);
 }
 
-.payment-buttons button:last-child a:hover {
+.payment-buttons a:last-child:hover {
     color: var(--dark-blue);
 }
 
